fix: form works adding rest of inputs

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,14 @@
     <input type="hidden" name="form-name" value="contact" />
     <input type="hidden" name="name" placeholder="Name" required />
     <input type="hidden" name="email" placeholder="Email" required />
+    <input type="hidden" name="services" placeholder="mastering" required />
+    <input
+      type="hidden"
+      name="number"
+      placeholder="Number of tracks"
+      required
+    />
+    <input type="hidden" name="streaming" placeholder="Streaming link" />
   </form>
   <script type="text/javascript" src="js/jquery.1.11.1.js"></script>
   <script type="text/javascript" src="js/bootstrap.js"></script>
