--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,9 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-  <link rel="apple-touch-icon" href="img/apple-touch-icon.png" />
-  <link
-    rel="apple-touch-icon"
-    sizes="72x72"
-    href="img/apple-touch-icon-72x72.png"
-  />
-  <link
-    rel="apple-touch-icon"
-    sizes="114x114"
-    href="img/apple-touch-icon-114x114.png"
-  />
+  <link rel="apple-touch-icon" href="img/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="72x72" href="img/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="114x114" href="img/favicon.ico" />
 
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
   <link
@@ -40,6 +32,7 @@
     rel="stylesheet"
   />
   <title>Micron Mastering</title>
+  <link rel="icon" type="image/x-icon" href="./img/favicon.ico" />
   <meta name="description" content="" />
   <meta name="author" content="@micronmastering" />
   <!-- Meta Pixel Code -->
